--- a/src/main/resources/templates/vinho/cadastro-vinho.html
+++ b/src/main/resources/templates/vinho/cadastro-vinho.html
@@ -98,6 +98,10 @@
 			</th:block>
 		</div>
 		
+		<div class="alert  alert-success" th:if="${!#strings.isEmpty(mensagem)}">
+			<span th:text="${mensagem}"></span>
+		</div>
+		
 		<div class="form-group">
 			<label for="nome">Nome</label>
 			<input id="nome" type="text" class="form-control" th:field="*{nome}"/>
