Acrescentando página 403 de error - acesso negado e habilitando visão de cadastro de vinho somente para o usuario correto com acesso ao cadastro

--- a/src/main/resources/templates/layout/layout-padrao.html
+++ b/src/main/resources/templates/layout/layout-padrao.html
@@ -41,7 +41,7 @@
 	      </ul>
 	    </div>
 
-	    <!-- <ul class="nav navbar-nav  navbar-right">
+	    <ul class="nav navbar-nav  navbar-right">
 	    	<li>
 	    		<p class="navbar-text" th:text="${#authentication.name}"></p>
 	    	</li>
@@ -49,7 +49,6 @@
 	        	<a th:href="@{/logout}"><em class="fa  fa-sign-out"></em></a>
 	      	</li> 
 	    </ul>
-	 -->
 	  </div>
 	</nav>
 
